# canoe-driving-alert

./: .editorconfig  .gitattributes  .gitignore  8  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT_ENTRYPOINTS.md  OFFICIAL_REPO_GITIGNORE_PLAN.md  README.ko.md  README.md  pyproject.toml  sdv_cli.py  test_dbc_validation.py  tmp_st_assigned.txt  프로젝트_관리_가이드.md
.claude/: CLAUDE.md  README.md  launch.json  settings.json  (+1 more)
docs/: README.md  (+3 more)
reference/vector_samples_19_4_10/DDS/ADASBasicROS/ros2_ws/adas_node/: CMakeLists.txt  adas_algorithm.cpp
reference/vector_samples_19_4_10/IO_HIL/FDX/EasyClient/: CANoeFDX.h  CMakeLists.txt  EasyLogic.cpp  EasyLogic.h  FDXDatagram.cpp  FDXDatagram.h  FDXDispatcher.cpp  FDXDispatcher.h  FDXSocket.cpp  FDXSocket.h  Main.cpp
reference/vector_samples_19_4_10/Programming/BLF_Dump/: CMakeLists.txt  README.txt
reference/vector_samples_19_4_10/Programming/BLF_Dump/Source/: BlfDump.cpp  CANDumpFunctions.cpp  CANDumpFunctions.h  SystemDumpFunctions.cpp  SystemDumpFunctions.h
reference/vector_samples_19_4_10/Programming/C_Library/Examples/: CANoeCCL.sln  CMakeLists.txt
reference/vector_samples_19_4_10/Programming/C_Library/Examples/ADAS/: ADAS.c  ADAS.vcxproj  ADAS.vcxproj.filters  CMakeLists.txt
reference/vector_samples_19_4_10/Programming/C_Library/Examples/ADAS/Configuration/: ADAS.cfg
reference/vector_samples_19_4_10/Programming/C_Library/Examples/CAN/: CAN.c  CAN.vcxproj  CAN.vcxproj.filters  CMakeLists.txt
reference/vector_samples_19_4_10/Programming/C_Library/Examples/CAN/Configuration/: CANalyzer.cfg  CANoe.cfg  Comment_CAN.txt
reference/vector_samples_19_4_10/Programming/C_Library/Examples/DistributedObjects/: CMakeLists.txt  DistributedObjects.c  DistributedObjects.vcxproj  DistributedObjects.vcxproj.filters
reference/vector_samples_19_4_10/Programming/C_Library/Examples/DistributedObjects/Configuration/: DataModel.vcdl  DistributedObjects.cfg
reference/vector_samples_19_4_10/Programming/C_Library/Examples/Ethernet/: CMakeLists.txt  Ethernet.c  Ethernet.vcxproj  Ethernet.vcxproj.filters
reference/vector_samples_19_4_10/Programming/C_Library/Examples/Ethernet/Configuration/: Comment_Ethernet.txt  EthernetChannelBased.cfg
reference/vector_samples_19_4_10/Programming/C_Library/Examples/GlobalEventHandler/: CMakeLists.txt  GlobalEventHandler.c  GlobalEventHandler.vcxproj  GlobalEventHandler.vcxproj.filters
reference/vector_samples_19_4_10/Programming/C_Library/Examples/GlobalEventHandler/Configuration/: CANalyzerGlobalEventHandler.cfg  CANoeGlobalEventHandler.cfg  Comment_GlobalEventHandler.txt
reference/vector_samples_19_4_10/Programming/C_Library/Examples/LIN/: CMakeLists.txt  LIN.c  LIN.vcxproj  LIN.vcxproj.filters
reference/vector_samples_19_4_10/Programming/C_Library/Examples/LIN/Configuration/: CANalyzerLIN.cfg  CANoeLIN.cfg  Comment_LIN.txt  LINErrors.tse
reference/vector_samples_19_4_10/Programming/C_Library/Examples/ServiceDiscovery/: CMakeLists.txt  ServiceDiscovery.c  ServiceDiscovery.vcxproj  ServiceDiscovery.vcxproj.filters
reference/vector_samples_19_4_10/Programming/C_Library/Examples/ServiceDiscovery/Configuration/: CANoeServiceDiscovery.cfg
reference/vector_samples_19_4_10/Programming/C_Library/Examples/Signal/: CMakeLists.txt  Signal.c  Signal.vcxproj  Signal.vcxproj.filters
reference/vector_samples_19_4_10/Programming/C_Library/Examples/Signal/Configuration/: CANoeSignal.cfg  Comment_Signal.txt
reference/vector_samples_19_4_10/Programming/C_Library/Examples/SlaveMode/: CMakeLists.txt  SlaveMode.cpp  SlaveMode.vcxproj  SlaveMode.vcxproj.filters
reference/vector_samples_19_4_10/Programming/C_Library/Examples/SlaveMode/Configuration/: CANoeSlaveMode.cfg  Comment_SlaveMode.txt
reference/vector_samples_19_4_10/Programming/C_Library/Examples/SlaveMode/TriggerCANoe/: TriggerCANoe.cpp  TriggerCANoe.vcxproj  TriggerCANoe.vcxproj.filters
reference/vector_samples_19_4_10/Programming/C_Library/Examples/SystemVariables/: CMakeLists.txt  SystemVariables.c  SystemVariables.vcxproj  SystemVariables.vcxproj.filters
reference/vector_samples_19_4_10/Programming/C_Library/Examples/SystemVariables/Configuration/: CANalyzerSystemVariables.cfg  CANoeSystemVariables.cfg  Comment_SystemVariables.txt
reference/vector_samples_19_4_10/Programming/C_Library/Examples/Timer/: CMakeLists.txt  Timer.c  Timer.vcxproj  Timer.vcxproj.filters
reference/vector_samples_19_4_10/Programming/C_Library/Examples/Timer/Configuration/: CANalyzerTimer.cfg  CANoeTimer.cfg  Comment_Timer.txt
reference/vector_samples_19_4_10/SIL/SilAdapterBasicHwDebugger/SUT/: CMakeLists.txt  CMakePresets.json  README.md  build_hardware.bat  build_qemu.bat
reference/vector_samples_19_4_10/SIL/SilAdapterBasicHwDebugger/SUT/IO/: CMakeLists.txt  IO.h
reference/vector_samples_19_4_10/SIL/SilAdapterBasicHwDebugger/SUT/IO/HW/: IO.c
reference/vector_samples_19_4_10/SIL/SilAdapterBasicHwDebugger/SUT/IO/SIL/: IO.c
reference/vector_samples_19_4_10/SIL/SilAdapterBasicHwDebugger/SUT/Logic/: CMakeLists.txt  Logic.c  Logic.h
reference/vector_samples_19_4_10/SIL/SilAdapterBasicHwDebugger/SUT/RaspiPico/: CMakeLists.txt  main.c
reference/vector_samples_19_4_10/SIL/SilKitCAN/SilKit/: CMakeLists.txt
reference/vector_samples_19_4_10/SIL/SilKitCAN/SilKit/SUT/Engine/: CMakeLists.txt  SUT_Engine.cpp
reference/vector_samples_19_4_10/SIL/SilKitCAN/SilKit/SUT/Lights/: CMakeLists.txt  SUT_Lights.cpp
reference/vector_samples_19_4_10/SIL/SilKitCAN/SilKit/SUT/include/: ConsoleUI.hpp  SignalHandler.hpp
reference/vector_samples_19_4_10/TestFeatureSet/SmartECGvTESTstudio/SUT/: CMakeLists.txt
reference/vector_samples_19_4_10/TestFeatureSet/SmartECGvTESTstudio/SUT/Application_C/TypeLibWrapper/: TypeLibWrapper.h
reference/vector_samples_19_4_10/TestFeatureSet/SmartECGvTESTstudio/SUT/Application_C/src/: IO.c  IO.h  QRSDetection.h
reference/vector_samples_19_4_10/TestFeatureSet/SmartECGvscode/SUT/Application_C/: CMakeLists.txt
reference/vector_samples_19_4_10/TestFeatureSet/SmartECGvscode/SUT/Application_C/TypeLibWrapper/: TypeLibWrapper.cpp
(+6953 files in other folders)
