[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "canoe-sdv-cli"
version = "0.1.0"
description = "Local CLI launcher for CANoe driving-alert verification and gates"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
  { name = "VectorCANoe Development Team" }
]
keywords = ["canoe", "capl", "verification", "cli", "automotive"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Operating System :: Microsoft :: Windows",
  "Environment :: Console",
]
dependencies = [
  "questionary>=2.1.1,<3",
  "rich>=14,<15",
  "textual>=8,<9",
]

[project.optional-dependencies]
docs = [
  "mkdocs==1.6.1",
  "mkdocs-material==9.7.4",
]

[project.scripts]
sdv = "sdv_cli:main"

[tool.setuptools]
py-modules = ["sdv_cli"]
